--- a/manifest.json
+++ b/manifest.json
@@ -2,25 +2,29 @@
   "name":"инстаграм бот",
   "description":"Instagram extension",
   "version":"1.0",
-  "manifest_version":2,
-  "icons": { "16": "./img/icon_small.png",
+  "manifest_version":3,
+  "icons": {
+    "16": "./img/icon_small.png",
     "48": "./img/icon_small.png",
-   "128": "./img/icon_small.png" },
+    "128": "./img/icon_small.png"
+  },
 
-  "browser_action": {
+  "action": {
     "default_title": "Instagram",
     "default_icon": "./img/icon_small.png",
     "default_popup": "index.html"
   },
+
   "content_scripts": [
     {
       "matches":["https://www.instagram.com/*"],
-      "js":["index.js"],
+      "js":["constants.js","index.js"],
       "run_at":"document_end"
     }
   ],
+
   "commands": {
-    "_execute_browser_action": {
+    "_execute_action": {
       "suggested_key": {
         "default": "Ctrl+Shift+F",
         "mac": "MacCtrl+I"
@@ -28,5 +32,4 @@
       "description": "Opens hello.html"
     }
   }
-
 }
